--- a/crearwebestatica.html
+++ b/crearwebestatica.html
@@ -1,1 +1,40 @@
-Pagina prueba
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Mejores palas de pádel 2025</title>
+</head>
+<body>
+    <h1>Mejores Palas de Pádel de 2025</h1>
+    <ul>
+        <li>
+            <h2>Nox AT10 Genius 18K Alum</h2>
+            <p>Usada por: Agustín Tapia (número uno mundial en 2025). Pala de carbono aluminizado y núcleo EVA, equilibrio entre potencia y control.</p>
+        </li>
+        <li>
+            <h2>Adidas Metalbone 3.4 2025</h2>
+            <p>Usada por: Ale Galán. Ofrece potencia y posibilidad de ajustar peso y balance. Ideal para jugadores ofensivos avanzados.</p>
+        </li>
+        <li>
+            <h2>Head Coello Pro 2025</h2>
+            <p>Usada por: Arturo Coello (actual número uno del mundo). Pala diamante, carbono y núcleo Power Foam, máxima potencia y control.</p>
+        </li>
+        <li>
+            <h2>Babolat Counter Viper 2025</h2>
+            <p>Usada por: Juan Lebrón. Control excepcional y punto dulce amplio, manejable y balance medio-alto, mango largo para mayor alcance.</p>
+        </li>
+        <li>
+            <h2>Starvie Drax Pro 2025</h2>
+            <p>Modelo nuevo de esta temporada, polivalente, tacto firme y reactivo, buena para defensivos y ofensivos. Gomas disponibles en Pro Touch (dura) y Soft 30 (blanda).</p>
+        </li>
+        <li>
+            <h2>Víbora Black Mamba Radical 12K 2.0</h2>
+            <p>Usada por: Javi Rico. Pala de gran polivalencia y control, buen ataque y seguridad en juego. Balance medio y punto dulce grande.</p>
+        </li>
+        <li>
+            <h2>Bullpadel Neuron Chingotto</h2>
+            <p>Usada por: Federico Chingotto. Palas diseñadas para potencia y manejabilidad, adaptadas al juego agresivo en la red y fondo de pista.</p>
+        </li>
+    </ul>
+</body>
+</html>
