--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <h1>Portafolio de Alejandro Pascual Ramos</h1>
     <ul>
         <li>
+            <h2>Tarea 2ASIR. Montar un servidor de IA</h2>
+            <a href="enlace-al-pdf-1.pdf" target="_blank">Ver PDF</a>
+        </li>
+        <li>
+            <h2>Tarea 2ASIR. Desmontar y Montar un PC en el taller</h2>
+            <a href="enlace-al-pdf-2.pdf" target="_blank">Ver PDF</a>
+        </li>
+        <li>
+            <h2>Tarea 2ASIR. Desmontar y Montar un servidor y un portátil en el taller</h2>
+            <a href="enlace-al-pdf-3.pdf" target="_blank">Ver PDF</a>
+        </li>
+        <li>
             <h2>Tarea 2ASIR. Crear una web estática en Github.</h2>
             <a href="enlace-al-pdf-4.pdf" target="_blank">Ver PDF</a>
         </li>
