--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <ul>
         <li>
             <h2>Tarea 2ASIR. Montar un servidor de IA</h2>
-            <a href="/carpetapdf/Curso IA Alejandro Pascual Ramos ASIR.pdf.tar.gz" target="_blank">Ver PDF</a>
+            <a href="/carpetapdf/Curso IA Alejandro Pascual Ramos ASIR.pdf" target="_blank">Ver PDF</a>
         </li>
         <li>
             <h2>Tarea 2ASIR. Desmontar y Montar un PC en el taller</h2>
-            <a href="enlace-al-pdf-2.pdf" target="_blank">Ver PDF</a>
+            <a href="Tarea 2ASIR. Desmontar y Montar un PC en el taller.pdf" target="_blank">Ver PDF</a>
         </li>
         <li>
             <h2>Tarea 2ASIR. Desmontar y Montar un servidor y un portátil en el taller</h2>
-            <a href="enlace-al-pdf-3.pdf" target="_blank">Ver PDF</a>
+            <a href="Tarea 2ASIR. Desmontar y Montar un servidor y un portátil en el taller.pdf" target="_blank">Ver PDF</a>
         </li>
         <li>
             <h2>Tarea 2ASIR. Crear una web estática en Github.</h2>
-            <a href="enlace-al-pdf-4.pdf" target="_blank">Ver PDF</a>
+            <a href="enhttps://alejandropr05.github.io/2asirAFH2526/carpetatrabajos/crearwebestatica.html" target="_blank">Ver PDF</a>
         </li>
         <li>
             <h2>T 2ASIR. Conexión remota</h2>
