--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li>
             <h2>Tarea 2ASIR. Montar un servidor de IA</h2>
-            <a href="carpetapdf/Curso IA Alejandro Pascual Ramos ASIR.pdf" target="_blank">Ver PDF</a>
+            <a href="https://alejandropr05.github.io/2asirAFH2526/carpetapdf/Curso IA Alejandro Pascual Ramos ASIR.pdf" target="_blank">Ver PDF</a>
         </li>
         <li>
             <h2>Tarea 2ASIR. Desmontar y Montar un PC en el taller</h2>
