--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         </li>
         <li>
             <h2>Tarea 2ASIR. Desmontar y Montar un PC en el taller</h2>
-            <a href="carpetapdf/Tarea 2ASIR. Desmontar y Montar un PC en el taller.pdf" target="_blank">Ver PDF</a>
+            <a href="https://alejandropr05.github.io/2asirAFH2526/carpetapdf/Tarea 2ASIR. Desmontar y Montar un PC en el taller.pdf" target="_blank">Ver PDF</a>
         </li>
         <li>
             <h2>Tarea 2ASIR. Desmontar y Montar un servidor y un portátil en el taller</h2>
-            <a href="carpetapdf/Tarea 2ASIR. Desmontar y Montar un servidor y un portátil en el taller.pdf" target="_blank">Ver PDF</a>
+            <a href="https://alejandropr05.github.io/2asirAFH2526/carpetapdf/Tarea 2ASIR. Desmontar y Montar un servidor y un portátil en el taller.pdf" target="_blank">Ver PDF</a>
         </li>
         <li>
             <h2>Tarea 2ASIR. Crear una web estática en Github.</h2>
-            <a href="carpetapdf/https://alejandropr05.github.io/2asirAFH2526/carpetatrabajos/crearwebestatica.html" target="_blank">Ver PDF</a>
+            <a href="https://alejandropr05.github.io/2asirAFH2526/carpetatrabajos/crearwebestatica.html" target="_blank">Ver PDF</a>
         </li>
         <li>
             <h2>T 2ASIR. Conexión remota</h2>
