--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </li>
             <li>
                 <h2>Tarea 2ASIR. Desmontar y Montar un servidor y un portátil en el taller</h2>
-                <a class="pdf-link" href="https://alejandropr05.github.io/2asirAFH2526/carpetapdf/Tarea%202ASIR.%20Desmontar%20y%20Montar%20un%20servidor%20y%20un%20port%C3%A1til%20en%20el%20taller.pdf" target="_blank">Ver PDF</a>
+                <a class="pdf-link" href="https://alejandropr05.github.io/2asirAFH2526/carpetapdf/Desmontar y Montar un Servidor en el taller_Alejandro Pascual.pdf" target="_blank">Ver PDF</a>
             </li>
             <li>
                 <h2>Tarea 2ASIR. Crear una web estática en Github.</h2>
